syntax = "proto3";

package proto;

service Musics {
    rpc GetMusic(Id) returns (Music) {}
    rpc GetAlbum(Id) returns (Album) {}
    rpc GetArtist(Id) returns (Artist) {}
}

message Id {
    string Id = 1;
}

message Music {
    string id = 1;
    string title = 2;
    int32 durationInSeconds = 3;
    string file = 4;
    repeated string composers = 5;
    string lyrics = 6;
    string albumId = 7;
}

message Album {
    string id = 1;
    string name = 2;
    string year = 3;
    string cover = 4;
    string studio = 5;
    repeated string producers = 6;
    repeated Music musics = 7;
    string artistId = 8;
}

message Artist {
    string id = 1;
    string name = 2;
    string description = 3;
    Genre genre = 4;
    repeated string photos = 5;
    repeated Album albums = 6;
}

enum Genre {
    Heavy_Metal = 0;
    Folk_Metal = 1;
    Power_Metal = 2;
    Death_Metal = 3;
    Thrash_Metal = 4;
    Black_Metal = 5;
}
